--- a/PSS/Pages/ViewNew.razor
+++ b/PSS/Pages/ViewNew.razor
@@ -1,5 +1,6 @@
 ﻿@*Page for viewing full-sized images*@
 @page "/view/{id}"
+@inject NavigationManager navigationManager;
 @using PSS.Backend
 @using System.IO
 @layout EmptyLayout
@@ -20,7 +21,7 @@
         @*Stuff in top right corner*@
         <div id="buttons">
             <button @onclick="@(() => ToggleDropdown(ref infoVis))" title="Show Info"><span class="material-icons-outlined">info</span></button>
-            <button title="Delete"><svg width="24px" height="24px" class="material-icons-outlined" style="fill: white;" viewBox="0 0 24 24"><path d="M15 4V3H9v1H4v2h1v13c0 1.1.9 2 2 2h10c1.1 0 2-.9 2-2V6h1V4h-5zm2 15H7V6h10v13zM9 8h2v9H9zm4 0h2v9h-2z"></path></svg></button>
+            <button @onclick="@DeleteBtnClick" title="Delete"><svg width="24px" height="24px" class="material-icons-outlined" style="fill: white;" viewBox="0 0 24 24"><path d="M15 4V3H9v1H4v2h1v13c0 1.1.9 2 2 2h10c1.1 0 2-.9 2-2V6h1V4h-5zm2 15H7V6h10v13zM9 8h2v9H9zm4 0h2v9h-2z"></path></svg></button>
             <button @onclick="@(() => ToggleDropdown(ref moreOptionsVis))"><span class="material-icons-outlined">more_vert</span></button>
         </div>
         
@@ -57,6 +58,7 @@
     [Parameter]
     public string id { get; set; }
 
+    private static string staticID;
     private static string infoVis;
     private static string moreOptionsVis;
 }
@@ -64,9 +66,16 @@
 @functions{
     protected override void OnInitialized()
     {
+        staticID = id;
         infoVis = "hidden";
         moreOptionsVis = "hidden";
-    } 
+    }
+    
+    private void DeleteBtnClick()
+    {
+        navigationManager.NavigateTo("/");
+        Connection.MoveToTrash(Connection.GetPathFromUuid(staticID));
+    }
 
     private static void ToggleDropdown(ref string visibility) => visibility = visibility == "visible" ? "hidden" : "visible";
 }
