Create AlbumSelector component and implement in 1 place so far
holy shit I can't believe this works

--- a/PSS/Pages/Test.razor
+++ b/PSS/Pages/Test.razor
@@ -4,6 +4,11 @@
 @layout EmptyLayout
 
 @{
-    string yes = "new album 59";
-    <button @onclick="() => Connection.RemoveFromAlbum(yes, 1)">click me</button>
-} 
+    
+    <AlbumSelector SelectedItems="yes"/>
+}
+
+@code
+{
+    private List<string> yes = new() {"item1", "item2"};
+}
