--- a/PSS/Pages/Index.razor
+++ b/PSS/Pages/Index.razor
@@ -15,24 +15,7 @@
         <button id="clearBtn" @onclick="ClearChecks"><span class="material-icons-outlined">close</span></button>
     </header>
 
-    <div id="albumSelector" style="visibility: @albumsVis">
-        <button id="closeBtn" @onclick="CloseBtnClick" title="Cancel Adding to Albums"><span class="material-icons-outlined">close</span></button>
-        <button id="confirmBtn" @onclick="ConfirmBtnClick" title="Add to Selected Albums"><span class="material-icons-outlined">check</span></button>
-        <span id="addToText">Add to</span>
-        <div id="albums">
-            @for (int i = 0; i < albums.Count; i++)
-            {
-                int ii = i;
-                <div @onclick="@(() => checkedAlbums[ii] = !checkedAlbums[ii])" class="album">
-                    <div class="coverDiv">
-                        <img class="cover" src="@PSS.Settings.requestPath/@albums[i].albumCover" alt="">
-                    </div>
-                    <input type="checkbox" id="@i" @bind="@checkedAlbums[ii]" @bind:event="oninput">
-                    <span title="@albums[i].name">@albums[i].name</span>
-                </div>
-            }
-        </div>
-    </div>
+    <AlbumSelector SelectedItems="@selectedItems" @bind-HeaderVis="@headerVis" @bind-AlbumsVis="@albumsVis"/>
 
     if (mediaList.Count == 0)
     {
@@ -85,7 +68,7 @@
 
     private async Task ClearChecks()
     {
-        foreach (string item in selectedItems)
+        foreach (string item in selectedItems)  
             await JSRuntime.InvokeAsync<string>("removeCheck", item);
         selectedItems.Clear();
         headerVis = "hidden";
@@ -112,29 +95,5 @@
         mediaList = LoadMediaTable();
     }
 
-    //Functions for album stuff
     private static void AlbumBtnClick() => albumsVis = "visible";
- 
-    private static void CloseBtnClick()
-    {
-        albumsVis = "hidden";
-        for (int index = 0; index < checkedAlbums.Count; index++) checkedAlbums[index] = false;
-    }
-
-    //Add item(s) to album(s) selected.
-    private async Task ConfirmBtnClick()
-    {
-        for (int c = 0; c < checkedAlbums.Count; c++)
-        {
-            if (checkedAlbums[c] == false) continue;
-
-            foreach (string item in selectedItems)
-            {
-                AddToAlbum(item, albums[c].id);
-            }
-        }
-        CloseBtnClick();
-        headerVis = "hidden";
-        await ClearChecks();
-    }
 }
