--- a/PSS/Pages/ViewNew.razor
+++ b/PSS/Pages/ViewNew.razor
@@ -26,7 +26,7 @@
         <div id="infoDiv" style="visibility: @infoVis">
             <div title="Date Taken">
                 <svg width="24px" height="24px" class="v1262d JUQOtc Y0p3Ue" viewBox="0 0 24 24"><path d="M19 3h-1V1h-2v2H8V1H6v2H5a2 2 0 0 0-2 2v14a2 2 0 0 0 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2zm0 16H5V8h14v11zM9 9.5a2.5 2.5 0 0 0 0 5 2.5 2.5 0 0 0 0-5z"></path></svg>
-                <span>@dateTaken.ToString("ddd, MMM d, yyyy h:mm:ss tt")</span>
+                <span>@ogDateTaken.ToString("ddd, MMM d, yyyy h:mm:ss tt")</span>
                 <button><span class="material-icons-outlined">edit</span></button>
             </div>
             
@@ -52,7 +52,7 @@
         
         <div id="datePicker">
             <span>Enter new date taken:</span>
-            <input title="" type="datetime-local" @bind="@ViewNew.dateTaken" required/>
+            <input title="" type="datetime-local" @bind="@newDateTaken" required/>
             <div id="buttons">
                 <button><span class="material-icons-outlined">close</span></button>
                 <button><span class="material-icons-outlined">check</span></button>
@@ -68,7 +68,8 @@
     public string id { get; set; }
     private static string staticID;
 
-    private static DateTime dateTaken;
+    private static DateTime ogDateTaken; //Original
+    private static DateTime newDateTaken;
     private static string albumsVis;
     private static string infoVis;
     private static string moreOptionsVis;
@@ -77,7 +78,7 @@
 @functions{
     protected override void OnInitialized()
     {
-        dateTaken = Connection.GetDateTaken(Guid.Parse(id));
+        ogDateTaken = newDateTaken = Connection.GetDateTaken(Guid.Parse(id));
         staticID = id;
         albumsVis = "hidden";
         infoVis = "hidden";
