--- a/PSS/wwwroot/css/View.css
+++ b/PSS/wwwroot/css/View.css
@@ -1,274 +1,139 @@
 /*Stuff for just View.razor*/
+* {
+    color: white;
+    user-select: none;
+    font-family: 'Product Sans', sans-serif;
+}
 
-/*https://stackoverflow.com/questions/18490334/responsive-image-full-screen-and-centered-maintain-aspect-ratio-not-exceed-wi/18490463*/
-/*Used for the img in View.razor*/
-.imgView {
-    left: 0;
-    margin: auto;
-    overflow: auto;
+/*Buttons div in top right corner*/
+#buttons {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
     position: absolute;
     right: 0;
-    -o-object-fit: contain;
-    object-fit: contain;
+    z-index: 999;
 }
 
-/*Used for zooming in/out in photo viewer*/
-.zoomRange {
-    width: 200px;
-    position: fixed; /*https://stackoverflow.com/a/11399610*/
-    right: 5px;
-    top: 80px;
-    opacity: 0.3;
-    transition: .4s;
-}
-
-.range:hover {
-    opacity: 0.7;
-}
-
-/*Buttons*/
-/*These buttons all have a lot of stuff in common, so in their class="..." thing, I put this class and then the button's actual class*/
-.round_view_icon_btn {
-    color: white; /* Icon Color */
+button {
     background: none;
+    color: white;
     border: none;
-    font-family: Product Sans;
-    text-align: center;
-    line-height: 50%;
     border-radius: 50%;
-    text-align: center;
-    vertical-align: middle;
-    overflow: hidden;
-    transition: .4s;
-    position: absolute;
     width: 50px;
     height: 50px;
-    margin-right: 10px;
+    margin: 3px;
 }
 
-    .round_view_icon_btn:hover {
-        background-color: rgba(211, 211, 211, 0.1);
-        cursor: pointer;
-    }
-
-.back_btn {
-    position: fixed;
-    top: 3px;
-    left: 2px;
+button:hover {
+    background-color: rgba(211, 211, 211, 0.1);
+    cursor: pointer;
 }
 
-.reset_zoom_btn {
-    position: fixed;
-    right: 200px;
-    top: 68px;
-    margin-right: 2px;
-}
-
-/*This seems pretty terrible but oh well*/
-.delete_btn {
-    position: fixed;
-    right: 49px;
-    top: 7px;
-}
-
-.star_btn {
-    position: fixed;
-    right: 97px;
-    top: 7px;
-}
-
-/* 3 dots dropdown stuff: https://www.w3schools.com/howto/howto_css_dropdown.asp */
-.three_dots_btn {
-    position: fixed;
-    right: 1px;
-    top: 7px;
-}
-
-/*Div containing button you hover over and the div with the actual dropdown content*/
-.dots-dropdown {
-    display: inline-block;
-    width: 252px;
-    height: auto;
-}
-
-/*Div holding the a tags*/
-.dots-dropdown-content {
-    right: 0;
-    top: 53px;
-    display: none;
+#infoDiv {
+    outline: 1px solid white;
+    background-color: black;
     position: absolute;
-    background-color: #f1f1f1;
-    border-radius: 4px;
+    z-index: 999;
+    top: 56px;
+    right: 60px;
 }
 
-    .dots-dropdown-content a {
-        font-family: 'Product Sans';
-        color: black;
-        padding: 12px 16px;
-        padding-left: 5px;
-        text-decoration: none;
-        display: flex;
-        word-break: break-all;
-        word-break: break-word;
-        word-wrap: break-word;
-        -webkit-box-align: center;
-        align-items: center;
-    }
+#infoDiv > div {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    align-content: center;
+    height: 55px;
+}
 
-        .dots-dropdown-content a:hover {
-            background-color: #ddd;
-        }
+#infoDiv > div > svg {
+    fill: white;
+    margin-left: 15px;
+    margin-right: 15px;
+}
 
-/* Show the dropdown menu on hover */
-.dots-dropdown:hover .dots-dropdown-content {
+#infoDiv > div > span {
+    margin-right: 5px;
+}
+
+/*Dropdown in top right corner*/
+#moreOptionsDiv {
+    display: flex;
+    flex-direction: column;
+    background-color: black;
+    position: absolute;
+    right: 1px;
+    top: 56px;
+    z-index: 999;
+    outline: 1px solid white;
+}
+
+#datePicker {
+    position: fixed;
+    left: 50%;
+    top: 50%;
+    -webkit-transform: translate(-50%, -50%);
+    transform: translate(-50%, -50%);
+    background-color: black;
+    height: 125px;
+    z-index: 999;
+    border: 1px solid white;
+}
+
+#datePicker > span {
+    margin-top: 10px;
+    margin-right: 10px;
+    margin-left: 10px;
     display: block;
 }
 
-/* Icons for the a elements */
-.dropbtn-icon {
-    margin: 2px;
-    margin-right: 6px;
-}
-
-/* Info button dropdown stuff */
-.info_btn {
-    position: fixed;
-    right: 145px;
-    top: 7px;
-}
-
-.info-dropdown-icon {
-    fill: #3c4043;
-    fill: rgba(0, 0, 0, .54);
-    position: absolute;
-    padding-left: 12px;
-    padding-right: 12px;
-}
-
-/* Shared stuff between buttons in the info dropdown */
-.info-dropdown-edit-btn {
-    color: #3c4043;
-    fill: #3c4043;
-    background: none;
+#datePicker > input[type="datetime-local"] {
+    color: black;
     border: none;
-    font-family: 'Product Sans';
-    text-align: center;
-    line-height: 50%;
+    outline: none;
+    margin-top: 10px;
+    margin-right: 10px;
+    margin-left: 10px;
+}
+
+header button:hover {
+    background-color: rgba(211, 211, 211, 0.1);
+    cursor: pointer;
+}
+
+#datePicker > #buttons > button {
+    color: white;
     border-radius: 50%;
-    text-align: center;
-    vertical-align: middle;
-    overflow: hidden;
-    transition: .4s;
-    position: absolute;
     width: 50px;
     height: 50px;
-    left: 150px;
-    top: 7px;
+    border: none;
+    background: none;
+    margin-top: 10px;
+    margin-right: 5px;
+    margin-bottom: 5px;
 }
 
-    .info-dropdown-edit-btn:hover {
-        background-color: rgba(211, 211, 211, 0.1);
-        cursor: pointer;
-    }
+#datePicker > #buttons > button:hover {
+    background-color: rgba(211, 211, 211, 0.1);
+    cursor: pointer;
+}
 
-.info-dropdown-bigtext {
-    font-family: 'Product Sans';
+#imgDiv {
+    height: 98%;
+    display: flex;
+    align-content: center;
+    align-items: center;
     position: absolute;
-    padding-left: 45px;
-    letter-spacing: .00625em;
-    font-weight: 400;
-    color: #3c4043;
-    font-size: 1rem;
+    left: 50%;
+    top: 50%;
+    -webkit-transform: translate(-50%, -50%);
+    transform: translate(-50%, -50%);
 }
 
-.info-dropdown-smalltext {
-    font-family: 'Product Sans';
-    position: absolute;
-    padding-left: 45px;
-    letter-spacing: .01428571em;
-    font-weight: 400;
-    color: #5f6368;
-    font-size: .9rem;
-}
-
-.info-dropdown {
-    display: inline-block;
-}
-
-.info-dropdown-content {
-    height: 142px;
-    width: 372px;
-    right: 70px;
-    top: 60px;
-    display: none;
-    position: absolute;
-    background-color: #f1f1f1;
-}
-
-.info-dropdown-textbox {
-    font-family: 'Product Sans';
-    font-size: 1rem;
-    width: 40px;
-    margin-left: 2px;
-    margin-top: 153px;
-}
-
-.info-dropdown-toggle-btn {
-    font-family: 'Product Sans';
-    position: absolute;
-    margin-left: 4px;
-    top: 153px;
-    width: 40px;
-    height: 25px;
-}
-
-.info-dropdown-cancel-btn {
-    position: absolute;
-    position: absolute;
-    top: -200px;
-    margin: 0;
-    padding: 0;
-    left: 145px;
-}
-
-.info-dd-apply-btn {
-    position: absolute;
-    position: absolute;
-    top: -200px;
-    margin: 0;
-    padding: 0;
-    left: 150px;
-}
-
-.info-dd-datepicker {
-    position: absolute;
-    top: 82px;
-    left: 16px;
-}
-
-.info-dd-edit {
-    position: absolute;
-    top: 28px;
-    width: 36px;
-    margin: 0;
-    padding: 0;
-}
-
-.info-dd-hour-edit {
-    left: 165px
-}
-
-.info-dd-min-edit {
-    left: 215px;
-    top: -26px;
-}
-
-.info-dd-sec-edit {
-    top: -80px;
-    left: 265px;
-}
-
-.period-btn {
-    left: 305px;
-    top: -115px;
+/*https://stackoverflow.com/questions/18490334/responsive-image-full-screen-and-centered-maintain-aspect-ratio-not-exceed-wi/18490463*/
+#imgDiv > img {
+    height: 100%;
+    overflow: auto;
+    object-fit: cover;
 }
