Update og date taken when new date taken set

--- a/PSS/Pages/View.razor
+++ b/PSS/Pages/View.razor
@@ -100,5 +100,6 @@
     {
         editDateDivVis = "hidden";
         Connection.UpdateDateTaken(path, newDateTaken);
+        ogDateTaken = newDateTaken;
     }
 }
