--- a/PSS/Pages/View.razor
+++ b/PSS/Pages/View.razor
@@ -1,4 +1,4 @@
-﻿@*Page for viewing full-sized images*@
+@*Page for viewing full-sized images*@
 @page "/view/{id}"
 @inject NavigationManager navigationManager;
 @using PSS.Backend
@@ -23,18 +23,18 @@
         </div>
         
         <div id="infoDiv" style="visibility: @infoVis">
-            <div title="Date Taken">
+            <div class="dataDiv" title="Date Taken">
                 <svg width="24px" height="24px" class="v1262d JUQOtc Y0p3Ue" viewBox="0 0 24 24"><path d="M19 3h-1V1h-2v2H8V1H6v2H5a2 2 0 0 0-2 2v14a2 2 0 0 0 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2zm0 16H5V8h14v11zM9 9.5a2.5 2.5 0 0 0 0 5 2.5 2.5 0 0 0 0-5z"></path></svg>
                 <span>@ogDateTaken.ToString("ddd, MMM d, yyyy h:mm:ss tt")</span>
                 <button @onclick="@(() => editDateDivVis = "visible")"><span class="material-icons-outlined">edit</span></button>
             </div>
             
-            <div title="Date Added">
+            <div class="dataDiv" title="Date Added">
                 <svg width="24px" height="24px" class="v1262d JUQOtc Y0p3Ue" viewBox="0 0 24 24"><path d="M19 3h-1V1h-2v2H8V1H6v2H5a2 2 0 0 0-2 2v14a2 2 0 0 0 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2zm0 16H5V8h14v11zM9 9.5a2.5 2.5 0 0 0 0 5 2.5 2.5 0 0 0 0-5z"></path></svg>
                 <span>@Connection.GetDateAdded(Guid.Parse(id)).ToString("ddd, MMM d, yyyy h:mm:ss tt")</span>
             </div>
 
-            <div>
+            <div class="dataDiv">
                 <svg width="24px" height="24px" class="v1262d JUQOtc Y0p3Ue" viewBox="0 0 24 24"><path d="M19 3H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2zm0 16H5V5h14v14zm-5-7l-3 3.72L9 13l-3 4h12l-4-5z"></path></svg>
                 <span>@Path.GetFileName(Connection.GetPathFromUuid(id))</span>
             </div>
