--- a/PSS/wwwroot/css/View.css
+++ b/PSS/wwwroot/css/View.css
@@ -39,7 +39,7 @@ button:hover {
     right: 60px;
 }
 
-#infoDiv > div {
+#infoDiv > .dataDiv {
     display: flex;
     flex-direction: row;
     align-items: center;
@@ -47,13 +47,13 @@ button:hover {
     height: 55px;
 }
 
-#infoDiv > div > svg {
+#infoDiv > .dataDiv > svg {
     fill: white;
     margin-left: 15px;
     margin-right: 15px;
 }
 
-#infoDiv > div > span {
+#infoDiv > .dataDiv > span {
     margin-right: 5px;
 }
 
