--- a/PSS/wwwroot/css/View.css
+++ b/PSS/wwwroot/css/View.css
@@ -30,6 +30,7 @@ button:hover {
     cursor: pointer;
 }
 
+/* Div below the i button */
 #infoDiv {
     outline: 1px solid white;
     background-color: black;
@@ -39,6 +40,7 @@ button:hover {
     right: 60px;
 }
 
+/* 3 divs for date taken/added, and filename */
 #infoDiv > .dataDiv {
     display: flex;
     flex-direction: row;
@@ -55,6 +57,59 @@ button:hover {
 
 #infoDiv > .dataDiv > span {
     margin-right: 5px;
+}
+
+#infoDiv > #albumsText {
+    margin-left: 18px;
+}
+
+/* Showing albums this item is in */
+#infoDiv > #albumsIn {
+    border: 1px solid white;
+    padding-right: 2px;
+    margin-top: 12px;
+    height: 95px;
+    overflow-y: scroll;
+}
+
+#albumsIn > a {
+    text-decoration: none; /* Remove underline */
+}
+
+#albumsIn > a > .album {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: nowrap;
+    align-items: center;
+    width: auto;
+}
+
+#albumsIn > a > .album:hover {
+    background-color: rgba(211, 211, 211, 0.1);
+    cursor: pointer;
+}
+
+#albumsIn > a > .album > .coverDiv {
+    margin: 0;
+    padding: 0;
+    display: flex;
+}
+
+#albumsIn > a > .album > .coverDiv > .cover {
+    border-radius: 4px;
+    object-fit: cover;
+    width: 60px;
+    height: 60px;
+    border: 1px solid #212121;
+    background-color: #212121;
+}
+
+#albumsIn > a > .album > span {
+    margin-top: -1px;
+    margin-left: 6px;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
 }
 
 /*Dropdown in top right corner*/
