add back button

--- a/PSS/Pages/View.razor
+++ b/PSS/Pages/View.razor
@@ -73,6 +73,8 @@
                 <button @onclick="@ConfirmBtnClick"><span class="material-icons-outlined">check</span></button>
             </div>
         </div>
+        
+        <button id="backBtn" onclick="location.href='/'"><span class="material-icons-outlined">keyboard_backspace</span></button>
 
         <div id="imgDiv"><img id="@path" src="@PSS.Settings.requestPath/@path" alt=""/></div>
     }
