Really stupid and sub-optimal but View should now finally be good for Index AND albums

--- a/PSS/Pages/AlbumView.razor
+++ b/PSS/Pages/AlbumView.razor
@@ -125,7 +125,7 @@
         if (selectedItems.Count > 0)
             await ToggleCheck(path);
         else
-            navigationManager.NavigateTo($"/view/{uuid}");
+            navigationManager.NavigateTo($"/view-album-item/{albumID}/{uuid}");
     }
 
     private void DeleteAlbumBtnClick()
