--- a/PSS/Pages/Test.razor
+++ b/PSS/Pages/Test.razor
@@ -1,7 +1,7 @@
 @*A blank page just for testing stuff*@
 @page "/test"
 @using PSS.Backend
-@layout EmptyLayout
+@* @layout EmptyLayout *@
 
 @{
     
