start yes-no component

--- a/PSS/Pages/Test.razor
+++ b/PSS/Pages/Test.razor
@@ -5,10 +5,9 @@
 
 @{
     
-    <AlbumSelector SelectedItems="yes"/>
+    <YesNoInput/>
 }
 
 @code
 {
-    private List<string> yes = new() {"item1", "item2"};
 }
