basic yes no component with no logic works on test page i think

--- a/PSS/Pages/Test.razor
+++ b/PSS/Pages/Test.razor
@@ -3,11 +3,4 @@
 @using PSS.Backend
 @* @layout EmptyLayout *@
 
-@{
-    
-    <YesNoInput/>
-}
-
-@code
-{
-}
+<YesNoInput Message="Delete Selected Items?"/>
