--- a/PSS/wwwroot/css/YesNoInput.css
+++ b/PSS/wwwroot/css/YesNoInput.css
@@ -11,9 +11,19 @@
     top: 50%;
     transform: translate(-50%, -50%);
     background-color: black;
-    border: 2px solid white;
-    width: 300px;
-    height: 300px;
+    border: 1px solid white;
+    width: 250px;
+    height: 170px;
+}
+
+#inputDiv > #message {
+    text-align: center;
+    overflow-wrap: break-word;
+    position: absolute;
+    width: 95%;
+    left: 50%;
+    top: 35%;
+    transform: translate(-50%, -50%);
 }
 
 #inputDiv > #buttons {
@@ -21,7 +31,7 @@
     flex-direction: row;
     position: absolute;
     bottom: 10px;
-    right: 6px;
+    right: 10px;
 }
 
 #inputDiv > #buttons > button {
@@ -37,6 +47,7 @@
     letter-spacing: .01785714em;
     font-family: Product Sans, sans-serif;
     font-size: 1rem;
+    height: 40px;
     width: 90px;
     font-weight: 400;
     padding: 11px;
