--- a/PSS/Pages/Test.razor
+++ b/PSS/Pages/Test.razor
@@ -3,4 +3,4 @@
 @using PSS.Backend
 @* @layout EmptyLayout *@
 
-<YesNoInput Message="Delete Selected Items?"/>
+<YesNoInput Message="Delete Selected Items? jdhasd jhajhds jshdj shdkjsdha sdhjhj gshdgh"/>
