--- a/PSS/Shared/YesNoInput.razor
+++ b/PSS/Shared/YesNoInput.razor
@@ -1,6 +1,8 @@
-﻿@*Reusable component that allows user to choose yes or no before doing something as a double check.
+@*Reusable component that allows user to choose yes or no before doing something as a double check.
     Required Parameters:
     1. String Message: What to say to user
+    2. Method to run when 'Yes' pressed https://stackoverflow.com/a/56831924
+    3. Method to run when 'No' pressed
 *@
 @using PSS.Backend
 <link href="css/YesNoInput.css" rel="stylesheet">
@@ -9,8 +11,8 @@
     <div id="inputDiv">
         <span id="message">@Message</span>
         <div id="buttons">
-            <button><span class="material-icons-outlined">close</span><span>No</span></button>
-            <button><span class="material-icons-outlined">check</span><span>Yes</span></button>
+            <button @onclick="@(() => NoBtnClick.Invoke())"><span class="material-icons-outlined">close</span><span>No</span></button>
+            <button @onclick="@(() => YesBtnClick.Invoke())"><span class="material-icons-outlined">check</span><span>Yes</span></button>
         </div>
     </div>
 }
@@ -19,16 +21,9 @@
     [Parameter, EditorRequired]
     public string Message { get; set; } //https://stackoverflow.com/a/62142640
 
-    [Parameter]
-    public EventCallback<string> NoButtonPressed { get; set; }
-
-    [Parameter]
-    public EventCallback<string> YesButtonPressed { get; set; }
-}
-
-@functions {
-    private static void YesBtnClick()
-    {
-
-    }
+    [Parameter, EditorRequired]
+    public Action NoBtnClick { get; set; }
+    
+    [Parameter, EditorRequired]
+    public Action YesBtnClick { get; set; }
 }
