--- a/PSS/wwwroot/css/TwoChoiceInput.css
+++ b/PSS/wwwroot/css/TwoChoiceInput.css
@@ -1,5 +1,4 @@
-﻿/* YesNoInput component styling */
-* {
+﻿* {
     color: white;
     user-select: none;
     font-family: 'Product Sans', sans-serif;
@@ -48,7 +47,7 @@
     font-family: Product Sans, sans-serif;
     font-size: 1rem;
     height: 40px;
-    width: 90px;
+    min-width: 90px;
     font-weight: 400;
     padding: 11px;
 }
